# lamindb

./: .Rhistory  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  63whlZoN.gv  7bvlw1tG.gv  8GlCUfFa.gv  CHANGELOG.md  CONTRIBUTING.md  FtFA2gMrx0ERgAcr.gv  GezbjxNoqP3qcyL4.gv  LICENSE  README.md  XIwnYhNz.gv  artifact_2Cfmk2MBM56I9uTn0000.gv  artifact_Jg1JbRWPq3qX8ppx0000.gv  artifact_NGtWOtbTzG15Vad40000.gv  artifact_RgV2ym4mcX2qeuoU0000.gv  artifact_Sw3nVEdEznZwiRTp0000.gv  artifact_UacVaIVEgDAzX3mE0000.gv  artifact_avlfzSiAH8pM4pgf0000.gv  artifact_dq0MB3ch6ojNrbjA0000.gv  artifact_hI0NIaqvKMftfRbb0000.gv  artifact_mxlJmmOWPR7t847Q0000.gv  artifact_rgR70OsNKiUyrokX0000.gv  cellxgene_registeration.py  dDLFtv5Y.gv  hS3h9VQr.gv  hmmAQEcz.gv  lamin-project.yaml  lamindb_full.py  mini_immuno.anndata.zarr  noxfile.py  pRHfeYZm.gv  pyproject.full.toml  pyproject.toml  requirements-cache.txt  saPdSKXt.gv  (+6 more)
.github/ISSUE_TEMPLATE/: .config.yml  bug_report.yml  config.yml  enhancement.yml  feature_request.yml  usage_question.yml
.github/workflows/: build.yml  codeql.yml  doc-changes.yml  latest-changes.jinja2  latest-changes.py  latest-changes.yml  profile.yml  python-test.yml
.lamindb/: storage_uid.txt
default_storage/.lamindb/: _is_initialized
docs/: Makefile  annotate-flexible.ipynb  annotate-for-developers.ipynb  annotate.ipynb  api.md  arrays.ipynb  arrays.md  bio-registries.ipynb  bionty-base.md  bionty.md  can-validate.ipynb  cellregistry.md  changelog.md  cli.md  clinicore.md  conf.py  curate-any.ipynb  curate-custom.ipynb  curate-df.ipynb  curate-subclass.ipynb  curate.ipynb  curate.md  custom_curator.py  data.ipynb  design.md  ehrcuration.ipynb  ehrcurator.py  faq.md  features-lamin.md  features-laminapp.md  features-lamindb.md  features-laminhub.md  findrefs.md  guide-toc.md  guide.ipynb  guide.md  guides.md  index.md  installation.md  introduction.ipynb  (+45 more)
docs/_templates/: layout.html
docs/biology/: 00-registries.ipynb  01-ontologies.ipynb  01-registries.ipynb  02-scrna.ipynb  03-flow.ipynb  04-link-samples.ipynb  04-samples.ipynb  10-analyses.ipynb  10-scrna.ipynb  11-scrna-1.ipynb  20-flow.ipynb  30-spatial.ipynb  40-multimodal.ipynb  bio-registries.ipynb  cell_line.ipynb  cell_marker.ipynb  cell_type.ipynb  developmental_stage.ipynb  disease.ipynb  ethnicity.ipynb  experimental_factor.ipynb  features.md  genes.ipynb  lnschema-bionty.ipynb  organism.ipynb  pathway.ipynb  phenotype.ipynb  proteins.ipynb  test_notebooks.py  tissue.ipynb
docs/examples/: basic-ingest.ipynb  create-local-db.ipynb  feature-annotation.ipynb  index.md  ingest-fcs.ipynb  ingest-image.ipynb  ingest-multiple-datasets.ipynb
docs/faq/: 01-session.ipynb  02-ingest.ipynb  03-notebooks.ipynb  04-ingest-same-file-twice.ipynb  05-track-runin.ipynb  06-select.ipynb  07-acid.ipynb  07-ingest-acid.ipynb  08-lazy-loading.ipynb  08-setup.ipynb  acid.ipynb  acid.md  adatas-subset.ipynb  add_values.md  benchmark-search.ipynb  curate-any.ipynb  curate-any.md  data-validation.ipynb  delete.ipynb  existing-data.ipynb  flow.ipynb  header.ipynb  idempotency.ipynb  idempotency.md  import-modules.md  import-schema.ipynb  index.md  ingest-acid.ipynb  ingest-bfx.ipynb  ingest-folder.ipynb  ingest-same-file-twice.ipynb  ingest.ipynb  keep-artifacts-local.ipynb  keep-artifacts-local.md  key.ipynb  lazy-loading.ipynb  legacy-data.ipynb  link-entities.ipynb  link-samples.ipynb  linked-select.ipynb  (+34 more)
docs/guide/: 01-files-folders.ipynb  01-files-records.ipynb  01-files.ipynb  01-get-started.ipynb  01-guide1.ipynb  01-ingest.ipynb  01-install.ipynb  01-quickstart.ipynb  01-setup.ipynb  01-tutorial1.ipynb  02-data-lineage.ipynb  02-files.ipynb  02-ingest.ipynb  02-memory.ipynb  02-provenance.ipynb  02-schema.ipynb  02-select.ipynb  02-signup.ipynb  02-track.ipynb  03-add-delete.ipynb  03-existing.ipynb  03-files.ipynb  03-ingest-folder.ipynb  03-init.ipynb  03-knowledge.ipynb  03-memory.ipynb  03-select.ipynb  04-add-delete.ipynb  04-existing.ipynb  04-folder.ipynb  04-ingest.ipynb  04-memory.ipynb  04-schema.ipynb  04-select.ipynb  04-stream.ipynb  05-add-delete.ipynb  05-existing.ipynb  05-folder.ipynb  05-ingest.ipynb  05-init.ipynb  (+126 more)
docs/guides/: configure.ipynb  configure.md  create-local-db.ipynb  (+9 more)
issues/: 1.md
lamin/: __main__.py  _configure.py
lamindb/: __init__.py  __main__.py  _add.py  _amend_doc_strings.py  _amend_file.py  _amend_folder.py  _annotate.py  _artifact.py  _baseorm_methods.py  _can_curate.py  _can_validate.py  _category.py  _check_versions.py  _collection.py  _configure.py  _context.py  _curate.py  _data.py  _dataset.py  _delete.py  _diagram.py  _dobject.py  _feature.py  _feature_manager.py  _feature_set.py  _feature_value.py  _features.py  _featureset_methods.py  _file.py  _file_access.py  _file_methods.py  _filter.py  _finish.py  _folder.py  _from_iter.py  _from_values.py  _ingest.py  _is_versioned.py  _label.py  _lamin.py  (+39 more)
lamindb-db/: baseline-info.json  codeql-database.yml
scripts/: migrate_test_instances.py
sub/lamin-cli/: README.md  pyproject.toml
sub/lamin-cli/lamin_cli/: __init__.py  __main__.py  _notebook.py
sub/lamin-cli/tests/: conftest.py  test_cli.py  test_notebooks.py
sub/lamin-cli/tests/notebooks/: no-title.ipynb  not-initialized.ipynb  with-title-and-initialized-consecutive.ipynb  with-title-and-initialized-non-consecutive.ipynb
tests/: conftest.py  test_annotate.py  test_artifact.py  test_artifact_folders.py  test_base.py  test_baseorm.py  test_cache.py  test_can_validate.py  test_collection.py  test_context.py  test_conversion.py  test_curate.py  test_data.py  test_dataset.py  test_db.py  test_delete.py  test_dynamic_settings.py  test_feature.py  test_feature_manager.py  test_feature_set.py  test_file.py  test_file_class.py  test_file_hashing.py  test_folder.py  test_from_values.py  test_hashing.py  test_knowledge.py  test_label.py  test_label_manager.py  test_lamindb.py  test_load.py  test_manager.py  test_notebooks.py  test_orm.py  test_parents.py  test_parse.py  test_queryset.py  test_record.py  test_registry.py  test_run.py  (+20 more)
(+1202 files in other folders)
