[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamindb"
requires-python = ">=3.8"
authors = [{name = "Lamin Labs", email = "open-source@lamin.ai"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    # Lamin PINNED packages
    "lnschema_core==0.57.6",
    "lamindb_setup==0.61.2",
    "lamin_utils==0.12.0",
    "lamin_cli==0.2.5",
    # others
    "rapidfuzz",
    "pyarrow",
    "typing_extensions!=4.6.0",
    "python-dateutil",
    "anndata>=0.8.0,<=0.10.3",  # will upgrade to new anndata releases
    "fsspec",
    "pandas",
    "graphviz",
    "psycopg2-binary",
]

[project.urls]
Home = "https://github.com/laminlabs/lamindb"

[project.optional-dependencies]
bionty = [
    "lnschema_bionty==0.35.3",
]
aws = [
    "botocore==1.31.17",  # for aiobotocore inside s3fs, to fix deps resolution
    "urllib3<2", # for botocore
    "boto3==1.28.17", # to avoid conflicts arising due to the pin on botocore
    "aiobotocore==2.5.4",
    "fsspec[s3]==2023.9.0",
    "s3fs>=2023.9.0",  # very old versions of s3fs don't work
]
gcp = [
    "fsspec[gs]==2023.9.0"
]
jupyter = [
    "nbproject==0.9.2",  # keep pinning
    "nbstripout",
    "nbconvert",
]
zarr = [
    "zarr>=2.16.0",
]
fcs = [
    "readfcs>=1.1.7",
]
erdiagram = [
    "django-schema-graph",
]
dev = [
    # suppress warning
    "pandas<2",
    # basic test
    "pre-commit",
    "nox",
    "laminci>=0.3",
    "pytest>=6.0",
    "coverage",
    "pytest-cov",
    # others
    "nbproject_test>=0.3.0",
    # biology
    "faker-biology",
    # vault
    "lamin_vault",
]

[tool.black]
preview = true
